apollo-router/src/graphql/snapshots/apollo_router__graphql__request__tests__missing_extensions.snap
---
source: apollo-router/src/graphql/request.rs
expression: expected_result
---
query: "{ topProducts { upc name reviews { id product { name } author { id name } } } }"
variables:
  date: "2022-01-01T00:00:00+00:00"
